--- a/draw.html
+++ b/draw.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html> 
 <html> 
-<head> 
-  <meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0" />
-
-  <style>
-  body { padding:10px; margin:0px; background-color: #ccc; }
-  #main { margin: 10px auto 0px auto; }
-  </style>
   
-  <script src="draw.js"></script>
-</head> 
-<body>
+<script src="http://muckmool.github.io/draw.js"></script>
 <button id="clear">clear</button><br>
-<canvas id="main" width="300" height="300"></canvas>
-</body>
+<canvas id="main" width="400" height="400" style ="border: 1px solid #000000;"></canvas>
+
 </html>
