--- a/draw.html
+++ b/draw.html
@@ -1,5 +1,10 @@
 <html> 
   
+  <style>
+  body { padding:10px; margin:0px; background-color: #ccc; }
+  #main { margin: 10px auto 0px auto; }
+  </style>
+  
 <script src="http://muckmool.github.io/draw.js"></script>
 <button id="clear">clear</button><br>
 <canvas id="main" width="400" height="400" style ="border: 1px solid #000000;"></canvas>
