--- a/draw.html
+++ b/draw.html
@@ -1,9 +1,13 @@
 <html> 
   
+<head>
+  <meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0" />
+  
   <style>
   body { padding:10px; margin:0px; background-color: #ccc; }
   #main { margin: 10px auto 0px auto; }
   </style>
+</head>
   
 <script src="http://muckmool.github.io/draw.js"></script>
 <button id="clear">clear</button><br>
