--- a/draw.html
+++ b/draw.html
@@ -1,16 +1,17 @@
+<!DOCTYPE html> 
 <html> 
-  
-<head>
+<head> 
   <meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0" />
-  
+
   <style>
   body { padding:10px; margin:0px; background-color: #ccc; }
   #main { margin: 10px auto 0px auto; }
   </style>
-</head>
   
-<script src="http://muckmool.github.io/draw.js"></script>
+  <script src="draw.js"></script>
+</head> 
+<body>
 <button id="clear">clear</button><br>
-<canvas id="main" width="400" height="400" style ="border: 1px solid #000000;"></canvas>
-
+<canvas id="main" width="300" height="300"></canvas>
+</body>
 </html>
