--- a/draw.html
+++ b/draw.html
@@ -7,6 +7,6 @@
 </head> 
 <body>
 <button id="clear">clear</button><br>
-<canvas id="main" width="300" height="300" sytle = "border: 1px solid #000000;" ></canvas>
+<canvas id="main" width="300" height="300" style = "border: 1px solid #000000;" ></canvas>
 </body>
 </html>
