--- a/draw.html
+++ b/draw.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html> 
 <html> 
+
 <head> 
   <meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0" />
-  
-  <script src="draw.js"></script>
 </head> 
+
 <body>
+<script src="http://muckmool.github.io/draw.js"></script>
 <button id="clear">clear</button><br>
 <canvas id="main" width="300" height="300" style = "border: 1px solid #000000;" ></canvas>
 </body>
+
 </html>
