--- a/draw.html
+++ b/draw.html
@@ -3,10 +3,11 @@
 
 <head> 
   <meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0" />
-  <script src="http://muckmool.github.io/draw.js"></script>
+  
 </head> 
 
 <body>
+<script src="https://muckmool.github.io/draw.js"></script>
 <button id="clear">clear</button><br>
 <canvas id="main" width="300" height="300" style = "border: 1px solid #000000;" ></canvas>
 </body>
