--- a/draw2.html
+++ b/draw2.html
@@ -5,7 +5,7 @@
   
 <script src="https://muckmool.github.io/draw2.js"></script>
 
-<canvas id="main2" width="300" height="300" style = "border: 1px solid #000000;" ></canvas>
+<canvas id="canvas" width="400" height="400" style ="border: 1px solid #000000; "></canvas>
 
 </body>
 
