--- a/search.html
+++ b/search.html
@@ -3,8 +3,8 @@
 <head>
 <script type="text/javascript" src="search_hangul_alphabet.js"></script>
 <script type="text/javascript" src="search_hanja_alphabet.js"></script>
-<script type="text/javascript" src="search_hangul_2.js"></script>
-<script type="text/javascript" src="search_hanja_2.js"></script>
+<script type="text/javascript" src="search_hangul_m1.js"></script>
+<script type="text/javascript" src="search_hanja_m1.js"></script>
 </head>
  
 <body> 
@@ -39,8 +39,8 @@ function enterSearch2() {
 function myFunction1() {
     var x = document.getElementById("text1").value;
 
-    search_hanja_1(x);
-    search_hanja_2(x);
+    search_hanja_alphabet(x);
+    search_hanja_m1(x);
 
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> '); 
 }
@@ -50,8 +50,8 @@ function myFunction2() {
 
     var x = document.getElementById("text2").value;
 
-    search_hangul_1(x);
-    search_hangul_2(x);
+    search_hangul_alphabet(x);
+    search_hangul_m1(x);
 
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');                      
 }
