--- a/old/draw_mouse.html
+++ b/old/draw_mouse.html
@@ -3,7 +3,7 @@
 
 <body>
   
-<script src="https://muckmool.github.io/old/draw_mouth.js"></script>
+<script src="https://muckmool.github.io/old/draw_mouse.js"></script>
 <button id="clear">clear</button><br>
 <canvas id="main2" width="300" height="300" style = "border: 1px solid #000000;" ></canvas>
 
