--- a/old/touch4.html
+++ b/old/touch4.html
@@ -1,5 +1,5 @@
 
-    <canvas id="canvas2" width="600" height="600" syle ="border: 1px solid #000000;"></canvas>
+    <canvas id="canvas2" width="600" height="600" style ="border: 1px solid #000000;"></canvas>
 
     <script>
 
