--- a/old/draw_mouse.html
+++ b/old/draw_mouse.html
@@ -3,9 +3,10 @@
 
 <body>
   
-<script src="https://muckmool.github.io/old/draw_mouse.js"></script>
+
 <button id="clear">clear</button><br>
 <canvas id="main2" width="300" height="300" style = "border: 1px solid #000000;" ></canvas>
+<script src="https://muckmool.github.io/draw_mouse.js"></script>
 
 </body>
 
