--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <frameset cols = "30%, *">
     <frameset  rows = "60%, *">
           <frame src = "category.html" name = "category" noresize scrolling ="auto">
-          <frame src = "search.html" name = "search" noresize scrolling ="auto">
+          <frame src = "search2.html" name = "search" noresize scrolling ="auto">
      </frameset>
     <frame src = "memory.html" name = "main" noresize>
 </frameset>
