--- a/search2.html
+++ b/search2.html
@@ -1,10 +1,7 @@
 <html>
 
 <head>
-<script type="text/javascript" src="search_hangul_alphabet.js"></script>
-<script type="text/javascript" src="search_hanja_alphabet.js"></script>
-<script type="text/javascript" src="search_hangul_m1.js"></script>
-<script type="text/javascript" src="search_hanja_m1.js"></script>
+<script type="text/javascript" src="search_alphabet.js"></script>
 </head>
  
 <body> 
@@ -12,42 +9,21 @@
   
 <p>검색어
 <span class='green_window'>
-<input id=text2 type="text" class='input_text' style="width:140px" name="search2" onkeydown="enterSearch2()"/></span>
+<input id=text2 type="text" class='input_text' style="width:140px" /></span>
 <input type="button" class='sch_smit' value="검색" onclick="myFunction2()"/>
 
   
-<!-- JAVASCRIPT -->
+
 <script type="text/javascript">
-function enterSearch1() {
-    if(event.keyCode == 13){
-        myFunction1();  // 실행할 이벤트
-    }
-}
-  
-  
-function enterSearch2() {
-    if(event.keyCode == 13){
-        myFunction2();  // 실행할 이벤트
-    }
-}
-
-  
-function myFunction1() {
-    var x = document.getElementById("text1").value;
-
-    search_hanja_alphabet(x);
-    search_hanja_m1(x);
-
-    document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> '); 
-}
 
 
 function myFunction2() {
 
     var x = document.getElementById("text2").value;
 
-    search_hangul_alphabet(x);
-    search_hangul_m1(x);
+    search_alphabet(x);
+
+    //search_hagul_alphabet(x);
 
     document.write(' <p> <form><input type="button" value="페이지 새로 고침" onClick="window.location.reload()"></form> ');                      
 }
@@ -57,7 +33,7 @@ function myFunction2() {
 </script>
   
 <p>
-<p>  <a href ="muckmool.github.io/write5.html" target="main"> 새 글 쓰기 </a>
+<p>  <a href ="muckmool.github.io/write6.html" target="main"> 새 글 쓰기 </a>
 
 </body>
   
