--- a/dicionary8.html
+++ b/dicionary8.html
@@ -1,3 +1,6 @@
+<html>
+  <body>
+
 <script>
 
 var arr = [ 
@@ -2296,6 +2299,9 @@ var arr = [
             if ( filter.indexOf( navigator.platform.toLowerCase() ) < 0 ) { 
                      document.write('<script src ="https://muckmool.github.io/draw_touch.js"><', '/script>');   } 
             else {   document.write('<script src ="https://muckmool.github.io/draw_mouse.js"><', '/script>');   } } </script>
+  
+  </body>
+  </html?
 
 
 
