--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<html>
-    <head>
-       <title>한자 알파벳</title>
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-F5YCWJPFVS"></script>
-
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-F5YCWJPFVS');
-</script>    
-    </head>
-
-<frameset cols = "30%, *">
-    <frameset  rows = "60%, *">
-          <frame src = "category.html" name = "category" noresize scrolling ="auto">
-          <frame src = "search2.html" name = "search" noresize scrolling ="auto">
-     </frameset>
-    <frame src = "memory.html" name = "main" noresize>
-</frameset>
-<html>
+hello world
