--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<script src=""></script>
+<script src="https://muckmool.github.io/javascript/dictionary9.js"></script>
 
 <table style="border-collapse: collapse; width: 100%;" border="1" width="100%" text-align="center">
 <tbody>
