--- a/index.html
+++ b/index.html
@@ -2287,15 +2287,8 @@ var arr = [
 
 <p><input id="input_01" style="width: 300px; height: 35px; font-size: 15px;" type="text" value="" autofocus="" /><button onclick="search();" style="width: 100px; height: 35px; font-size: 15px;"> 조회 </button></p>
 
-<p><canvas id="main" style="border: 1px solid #000000;" width="300" height="300"></canvas>
+<p> <a id="search_obj" href="http://muckmool.tistory.com/2665" target="blank" >사전데이터</a></p>
 
-<a id="search_obj" href="http://muckmool.tistory.com/2665" target="blank" >사전데이터</a></p>
-
-<script> var filter = "win16|win32|win64|mac|macintel"; 
-         if ( navigator.platform ) { 
-            if ( filter.indexOf( navigator.platform.toLowerCase() ) < 0 ) { 
-                     document.write('<script src ="https://muckmool.github.io/draw_touch.js"><', '/script>');   } 
-            else {   document.write('<script src ="https://muckmool.github.io/draw_mouse.js"><', '/script>');   } } </script>
 
 
 <style>canvas { border: 1px solid black; }</style>
