--- a/index.html
+++ b/index.html
@@ -2161,6 +2161,23 @@ var arr = [
 
 
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>hanja dictionary</title>
+    <style>
+        #canvas {
+            border: 1px solid #000;
+        }
+        .options {
+            display: flex;
+            align-items: center;
+        }
+    </style>
+</head>
+
+
+
 <table style="border-collapse: collapse; width: 100%;" border="1" width="100%" text-align="center">
 <tbody>
 
@@ -2285,72 +2302,208 @@ var arr = [
 </tbody>
 </table>
 
-<p><input id="input_01" style="width: 300px; height: 35px; font-size: 15px;" type="text" value="" autofocus="" /><button onclick="search();" style="width: 100px; height: 35px; font-size: 15px;"> 조회 </button></p>
-
 <p> <a id="search_obj" href="http://muckmool.tistory.com/2665" target="blank" >사전데이터</a></p>
 
+<p><input id="input_01" style="width: 300px; height: 35px; font-size: 15px;" type="text" value="" autofocus="" />
+&nbsp;<button onclick="search();" style="width: 100px; height: 35px; font-size: 15px;"> 조회 </button>
+&nbsp;<button onclick="speak();" style="width: 100px; height: 35px; font-size: 15px;"> TTS </button>
+&nbsp;<button onclick="speak();" style="width: 100px; height: 35px; font-size: 15px;"> OCR </button></p>
 
 
-<style>canvas { border: 1px solid black; }</style>
-<p>
-<canvas id="mycanvas"/>
-<p>
- <button id = "btn1">지우기</button>
-  
-<script type="text/javascript">
-var canvas, context;
+    <p><canvas id="canvas" width="600" height="200"></canvas>
+    <p><button id = "btn1">지우기</button>
+    &nbsp<button id = "btn2">undo</button>
+    &nbsp<button id = "btn3">redo</button>
 
-window.onload = function (){
-canvas = document.getElementById('mycanvas');
-canvas.width = 400;
-canvas.height = 300;
-  context = canvas.getContext('2d'); 
 
-  // 선 굵기
-  context.lineWidth = 2;
-  context.strokeStyle = "black";
 
-  canvas.addEventListener("mousemove", function(e){ move(e) });
-  canvas.addEventListener("mousedown", function(e){ down(e) });
-  canvas.addEventListener("mouseup", function(e){ up(e) });
-  canvas.addEventListener("mouseout", function(e){ out(e) });
+
+    <div class="options">
+        <select id="type">
+            <option value="stroke">실선</option>
+            <option value="square">사각형</option>
+            <option value="eraser">지우개</option>
+        </select>
+        <select id="strokeStyle">
+            <option value="black">검정색</option>
+            <option value="blue">파란색</option>
+            <option value="red">빨간색</option>
+            <option value="pink">분홍색</option>
+            <option value="orange">주황색</option>
+        </select>
+        <select id="lineWidth">
+            <option value="5">5px</option>
+            <option value="10">10px</option>
+            <option value="15">15px</option>
+            <option value="20">20px</option>
+        </select>
+    </div>
+
+
+
+    <script>
+        let isAbleDraw = false;
+        const options = {
+            type: 'stroke',
+            strokeStyle: 'black',
+            lineWidth: 5,
+        };
+        const rects = [];
+        const rects2 = [];
+        let currentRect = null;
+        document.getElementById('canvas').addEventListener('mousedown', () => {
+            isAbleDraw = true;
+            currentRect = {
+                type: options.type,
+                strokeStyle: options.strokeStyle,
+                lineWidth: options.lineWidth,
+                coordinates: [],
+            };
+        });
+        document.getElementById('canvas').addEventListener('mousemove', (e) => {
+            if (isAbleDraw) {
+                const ctx = e.target.getContext('2d');
+                const [x, y] = [e.offsetX, e.offsetY];
+                currentRect.coordinates.push([x, y]);
+                drawTools.clear();
+                drawTools.execute(rects);
+                if (currentRect.type === 'stroke') drawTools.stroke(currentRect.coordinates, 'rgba(0, 0, 0, .3)', currentRect.lineWidth);
+                if (currentRect.type === 'eraser') drawTools.eraser(currentRect.coordinates, currentRect.lineWidth);
+                if (currentRect.type === 'square') drawTools.square(currentRect.coordinates, 'rgba(255, 255, 0, .3)');
+            }
+        });
+        document.getElementById('canvas').addEventListener('mouseup', () => {
+            isAbleDraw = false;
+            rects.push(currentRect);
+            drawTools.clear();
+            currentRect = null;
+            drawTools.execute(rects);
+            console.log(rects);
+        })
+
+        const drawTools = {
+            clear() {
+            	// 캔버스 내용 제거
+                const canvas = document.getElementById('canvas');
+                const ctx = canvas.getContext('2d');
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+            },
+            stroke(coordinates, color, lineWidth) {
+            	// 마우스가 이동한 경로를 따라 실선 그리기
+                if (coordinates.length > 0) {
+                    const ctx = document.getElementById('canvas').getContext('2d');
+                    const firstCoordinate = coordinates[0];
+                    ctx.beginPath();
+                    ctx.moveTo(firstCoordinate[0], firstCoordinate[1]);
+                    for (let i = 1; i < coordinates.length; i += 1) {
+                        ctx.lineTo(coordinates[i][0], coordinates[i][1]);
+                    }
+                    ctx.strokeStyle = color;
+                    ctx.lineWidth = lineWidth;
+                    ctx.stroke();
+                    ctx.closePath();
+                }
+            },
+            eraser(coordinates, lineWidth) {
+            	// 마우스가 이동한 좌표에 따라 하얀색으로 원을 그려서 지우개 기능처럼 동작
+                const canvas = document.getElementById('canvas');
+                const ctx = canvas.getContext('2d');
+                for (let i = 0; i < coordinates.length; i += 1) {
+                    ctx.beginPath();
+                    const coordinate = coordinates[i];
+                    const [x, y] = coordinate;
+                    ctx.fillStyle = 'white';
+                    ctx.arc(x, y, lineWidth / 2, 0, Math.PI * 2);
+                    ctx.fill();
+                    ctx.closePath();
+                }
+            },
+            execute(rects) {
+            	// rects 배열에 저장 된 도형을 기준으로 다시 캔버스에 그림
+                for (let i = 0; i < rects.length;  i += 1) {
+                    const rect = rects[i];
+                    const { type } = rect;
+                    if (type === 'stroke') this.stroke(rect.coordinates, rect.strokeStyle, rect.lineWidth);
+                    if (type === 'eraser') this.eraser(rect.coordinates, rect.lineWidth);
+                    if (type === 'square') this.square(rect.coordinates, rect.strokeStyle);
+                }
+            },
+            square(coordinates, color) {
+            	// 사각 도형을 그림
+                const canvas = document.getElementById('canvas');
+                const ctx = canvas.getContext('2d');
+                const start = coordinates[0];
+                const end = coordinates[coordinates.length - 1];
+                const [startX, startY] = start;
+                const [endX, endY] = [end[0] - startX, end[1] - startY];
+                ctx.beginPath();
+                ctx.fillStyle = color;
+                ctx.fillRect(startX, startY, endX, endY);
+                ctx.closePath();
+            },
+        };
+        document.getElementById('type').addEventListener('change', (e) => {
+            options.type = e.target.value;
+        });
+        document.getElementById('strokeStyle').addEventListener('change', (e) => {
+            options.strokeStyle = e.target.value;
+        });
+        document.getElementById('lineWidth').addEventListener('change', (e) => {
+            options.lineWidth = e.target.value;
+        });
+
+        document.getElementById("btn1").addEventListener('click',clear);
+        document.getElementById("btn2").addEventListener('click',undo);
+        document.getElementById("btn3").addEventListener('click',redo);
+
+        function clear(){
+            var canvas = document.getElementById("canvas");
+            canvas.getContext("2d").clearRect(0, 0, canvas.width, canvas.height);
+            rects.length = 0;
+            rects = [];
+        }
+
+        function undo(){
+            isAbleDraw = false;
+            rects2.push(rects[rects.length -1]);
+            rects.pop(currentRect);
+            drawTools.clear();
+            currentRect = null;
+            drawTools.execute(rects);
+            console.log(rects, " ", rects2);
+        }
+
+        function redo(){
+            isAbleDraw = false;
+            rects.push(rects2[rects2.length -1]);
+            rects2.pop(rects2[rects2.length -1]);
+            drawTools.clear();
+            currentRect = null;
+            drawTools.execute(rects);
+            console.log(rects, " ", rects2);
+        }
+
+
+
+
+// TTS
+
+function speak() {
+       
+    window.speechSynthesis.cancel(); // 현재 읽고있다면 초기화
+
+    const speechMsg = new SpeechSynthesisUtterance();
+    speechMsg.rate =  1; // 속도: 0.1 ~ 10      
+    speechMsg.pitch = 1; // 음높이: 0 ~ 2
+    speechMsg.lang =  "ko-KR";
+    speechMsg.text = document.getElementById("h61").textContent;
+    
+    // SpeechSynthesisUtterance에 저장된 내용을 바탕으로 음성합성 실행
+    window.speechSynthesis.speak(speechMsg)
 }
 
-// 처음 마우스가 눌려진 좌표
-var startX = 0, startY = 0;
-// 드래깅
-var painting = false;
 
-// 선 그리기
-function draw(curX, curY){
-  context.beginPath();
-  context.moveTo(startX, startY);
-  context.lineTo(curX, curY);
-  context.stroke();
-}
 
-function move(e){
-  if(!painting){ return; }
-  var curX = e.offsetX, curY = e.offsetY;
-  draw(curX, curY);
 
-  startX = curX; startY = curY;
-}
-
-function down(e){
-startX = e.offsetX;
-startY = e.offsetY;
-painting = true;
-}
-function up(e){ painting = false; }
-function out(e){ painting = false; }
-
-document.getElementById("btn1").addEventListener('click',clear);
-
-function clear(){
-  var canvas = document.getElementById("mycanvas");
-canvas.getContext("2d").clearRect(0, 0, canvas.width, canvas.height);
-
-}
 
 </script>
