--- a/index.html
+++ b/index.html
@@ -2338,17 +2338,23 @@ var arr = [
 
 <p>
 
-<div class="content">
+  <div class="content">
     <div class="colLeft">
-      <div class="drawingBoard loading"><span>Loading...</span></div>
       
+      <div class="drawingBoard loading"><span>Loading...</span></div>
       <div class="commands">
         <div class="cmd cmdUndo">Undo</div>
         <div class="cmd cmdClear">Clear</div><br/>
       </div>
     </div>
     <div class="colRight">
+
       <div class="charPicker mmahLookupChars"></div>
+
+ 
+      <div id="cbHL"><input type="checkbox" default checked="checked"/></div>
+      <div class="charPicker hanziLookupChars"></div>
+      
     </div>  
   </div>
 
