--- a/index.html
+++ b/index.html
@@ -2306,7 +2306,7 @@ var arr = [
       PenSize <span id="lineWidth">3</span><input type="range" id="penSize" min="1" max="30" value="3">
       <br>
       <canvas id="canvas" width="400" height="400" style="border: 2px solid; cursor: crosshair;"></canvas>
-      <span id="result"></span>
+      <h1 id="result"></h1>
       <br>
       <form>
         Language:
@@ -2329,12 +2329,12 @@ var arr = [
       ">Send</button>
 
     </span>
-    <script type="text/javascript" src="http://muckmool.github.io/OCR/handwriting.canvas.js"></script>
+    <script type="text/javascript" src="https://muckmool.github.io/OCR/handwriting.canvas.js"></script>
     <script type="text/javascript" defer>
       var canvas = new handwriting.Canvas(document.getElementById('canvas'), 3);
       var width = document.getElementById("demo").clientWidth
-      canvas.cxt.canvas.width  = width < 400 ? width : 400;
-      canvas.cxt.canvas.height = width < 400 ? width : 400;
+      canvas.cxt.canvas.width  = width < 300 ? width : 300;
+      canvas.cxt.canvas.height = width < 300 ? width : 300;
       canvas.setCallBack(function(data, err) {
         if (err) throw err;
         else document.getElementById("result").innerHTML = data;
