--- a/index.html
+++ b/index.html
@@ -2293,10 +2293,11 @@ var arr = [
 </tbody>
 </table>
 
-<p align = center> <a id="search_obj" href="http://muckmool.tistory.com/2665" target="blank" >사전데이터</a>
+<p> 
 &nbsp;<input id="input_01" style="width: 300px; height: 35px; font-size: 15px;" type="text" value="" autofocus="" />
 &nbsp;<button onclick="search();" style="width: 100px; height: 35px; font-size: 15px;"> 조회 </button>
 &nbsp;<button onclick="speak();" style="width: 100px; height: 35px; font-size: 15px;"> TTS </button>
+&nbsp;<a id="search_obj" href="http://muckmool.tistory.com/2665" target="blank" >사전데이터</a>
 
 <p>
   <h2 id="demo"></h2>
