--- a/index.html
+++ b/index.html
@@ -2294,15 +2294,10 @@ var arr = [
 </table>
 
 <p> 
+<span id="demo"></span>
 <span id="result"><font size= 20px>.</font></span>
 
-<p>
-  <h2 id="demo"></h2>
-
 <div>
-    <span style="display : inline-block">  
-  
-
       <br>
       <canvas id="canvas" width="250" height="250" style="border: 2px solid; cursor: crosshair;"></canvas>
       
@@ -2334,6 +2329,8 @@ var arr = [
           <option value="en">English</option>
         </select>
       </form>
+  <p>
+    <p align = center> <a id="search_obj" href="http://muckmool.tistory.com/2665" target="blank" >사전데이터</a>
 
 
     </span>
