--- a/index.html
+++ b/index.html
@@ -2297,7 +2297,8 @@ var arr = [
 <span id="demo"></span>
 <span id="result"><font size= 20px>.</font></span>
 
-<div>
+<>
+<span style="display: inline-block">
       <br>
       <canvas id="canvas" width="250" height="250" style="border: 2px solid; cursor: crosshair;"></canvas>
       
