--- a/index.html
+++ b/index.html
@@ -2293,9 +2293,10 @@ var arr = [
 </tbody>
 </table>
 
+
 <span id="demo"></span>
 
-<span id="result">.</span>
+<h1 id="result">.</h1>
 
 <div>
     <span style="display : inline-block">
