경제 단어 추가

--- a/index.html
+++ b/index.html
@@ -1882,6 +1882,8 @@ var arr = [
 '마땅의', '宜', '집면', '宀', '또차', '且', '.', ' ', '.', ' ', '.', ' ', '집에서 찬합의 음식을 먹으니 좋다. 마땅하다. 편의점', '', 
 '마칠필', '畢', '밭전', '田', '풀초두', '艹', '예쁠봉', '丰', '.', ' ', '.', ' ', '밭인 논에서 농사를 다 짓고 논에 푼 잉어를 풀과 가시나무로 만든 뜰채로 잡는 모양. 필경', '', 
 '드물희', '稀', '벼화', '禾', '바랄희', '希', '.', ' ', '.', ' ', '.', ' ', '벼를 심을 때 산가지에 실을 연결하여 베로 표시하여 간격을 드물게 하는 모습. 희소가치', '', 
+'경제', '經濟', '지날경', '經', '건널제', '濟', '.', ' ', '.', ' ', '.', ' ', '경세제민(經世濟民)의 준말. 물줄기처럼 돈과 재화를 흘려보내 어려움을 당한 백성을 구제한다는 뜻', '', 
+
 
 
               
