--- a/index.html
+++ b/index.html
@@ -1882,7 +1882,10 @@ var arr = [
 '마땅의', '宜', '집면', '宀', '또차', '且', '.', ' ', '.', ' ', '.', ' ', '집에서 찬합의 음식을 먹으니 좋다. 마땅하다. 편의점', '', 
 '마칠필', '畢', '밭전', '田', '풀초두', '艹', '예쁠봉', '丰', '.', ' ', '.', ' ', '밭인 논에서 농사를 다 짓고 논에 푼 잉어를 풀과 가시나무로 만든 뜰채로 잡는 모양. 필경', '', 
 '드물희', '稀', '벼화', '禾', '바랄희', '希', '.', ' ', '.', ' ', '.', ' ', '벼를 심을 때 산가지에 실을 연결하여 베로 표시하여 간격을 드물게 하는 모습. 희소가치', '', 
+'이신칭의', '以信稱義', '써이', '以', '믿을신', '信', '일컬을칭', '稱', '옳을의', '義', '.', ' ', '믿음으로써 의롭다 칭함을 받는다. (행위가 아닌 예수님을 믿음으로 구원받는 복음)', '', 
 '경제', '經濟', '지날경', '經', '건널제', '濟', '.', ' ', '.', ' ', '.', ' ', '경세제민(經世濟民)의 준말. 물줄기처럼 돈과 재화를 흘려보내 어려움을 당한 백성을 구제한다는 뜻', '', 
+'결제결재', '決濟決裁', '결단할결', '決', '건널제', '濟', '결단할결', '決', '마를재', '裁', '.', ' ', '결제는 돈의 지불을 결정하여 넘겨준다는 뜻. 결재는 어떤 결정한 일을 시작하라고 승인한다는 뜻', '', 
+
 
 
 
