--- a/index.html
+++ b/index.html
@@ -1884,7 +1884,8 @@ var arr = [
 '드물희', '稀', '벼화', '禾', '바랄희', '希', '.', ' ', '.', ' ', '.', ' ', '벼를 심을 때 산가지에 실을 연결하여 베로 표시하여 간격을 드물게 하는 모습. 희소가치', '', 
 '이신칭의', '以信稱義', '써이', '以', '믿을신', '信', '일컬을칭', '稱', '옳을의', '義', '.', ' ', '믿음으로써 의롭다 칭함을 받는다. (행위가 아닌 예수님을 믿음으로 구원받는 복음)', '', 
 '경제', '經濟', '지날경', '經', '건널제', '濟', '.', ' ', '.', ' ', '.', ' ', '경세제민(經世濟民)의 준말. 물줄기처럼 돈과 재화를 흘려보내 어려움을 당한 백성을 구제한다는 뜻', '', 
-'결제결재', '決濟決裁', '결단할결', '決', '건널제', '濟', '결단할결', '決', '마를재', '裁', '.', ' ', '결제는 돈의 지불을 결정하여 넘겨준다는 뜻. 결재는 어떤 결정한 일을 시작하라고 승인한다는 뜻', '', 
+'결제', '決濟', '결단할결', '決', '건널제', '濟', '.', ' ', '.', ' ', '.', ' ', '결제는 돈의 지불을 결정하여 넘겨준다는 뜻. ', '', 
+'결재', '決裁', '결단할결', '決', '마를재', '裁', '.', ' ', '.', ' ', '.', ' ', '결재는 어떤 결정한 일을 시작하라고 승인한다는 뜻.', '', 
 
 
 
