--- a/index.html
+++ b/index.html
@@ -1887,6 +1887,9 @@ var arr = [
 '결제', '決濟', '결단할결', '決', '건널제', '濟', '.', ' ', '.', ' ', '.', ' ', '결제는 돈의 지불을 결정하여 넘겨준다는 뜻. ', '', 
 '결재', '決裁', '결단할결', '決', '마를재', '裁', '.', ' ', '.', ' ', '.', ' ', '결재는 어떤 결정한 일을 시작하라고 승인한다는 뜻.', '', 
 '짤함', '鹹', '소금로', '鹵', '다함', '咸', '.', ' ', '.', ' ', '.', ' ', '솥에 불을 때고 끓여서 소금을 만들면 사람들이 먹고 짜다고 함성지름', '', 
+'나라국', '囗', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '나라를 지키기 위해 네 면에 성벽을 쌓은 모양', '', 
+'어진사람인', '儿', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '보폭을 크게하고 천천히 걷는 어진 사람의 다리 모양', '', 
+
 
 
 
