--- a/index.html
+++ b/index.html
@@ -1889,6 +1889,12 @@ var arr = [
 '짤함', '鹹', '소금로', '鹵', '다함', '咸', '.', ' ', '.', ' ', '.', ' ', '솥에 불을 때고 끓여서 소금을 만들면 사람들이 먹고 짜다고 함성지름', '', 
 '나라국', '囗', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '나라를 지키기 위해 네 면에 성벽을 쌓은 모양', '', 
 '어진사람인', '儿', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '보폭을 크게하고 천천히 걷는 어진 사람의 다리 모양', '', 
+'돼지머리두', '亠', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '잘라 놓은 돼지 머리 모양', '', 
+'삐침별', '丿', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '무언가 삐쳐서 자르는 모양', '', 
+'풀초두', '艹', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '풀이 돋은 모습', '', 
+'뚫을곤', '丨', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '무언가 꿰뚫는 송곳 모양', '', 
+'멀경', '冂', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '밭의 가장자리로 가는 것이 가장 먼 거리다', '', 
+'사사로울사', '厶', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '내 것을 챙기는 팔뚝모양. 사사로운 이익을 챙기는 모습.', '', 
 
 
 
