--- a/index.html
+++ b/index.html
@@ -1895,6 +1895,7 @@ var arr = [
 '뚫을곤', '丨', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '무언가 꿰뚫는 송곳 모양', '', 
 '멀경', '冂', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '밭의 가장자리로 가는 것이 가장 먼 거리다', '', 
 '사사로울사', '厶', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '내 것을 챙기는 팔뚝모양. 사사로운 이익을 챙기는 모습.', '', 
+'사람인변', '亻', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람인을 변으로 사용할 때 글자 모양', '', 
 
 
 
