--- a/index.html
+++ b/index.html
@@ -1896,6 +1896,17 @@ var arr = [
 '멀경', '冂', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '밭의 가장자리로 가는 것이 가장 먼 거리다', '', 
 '사사로울사', '厶', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '내 것을 챙기는 팔뚝모양. 사사로운 이익을 챙기는 모습.', '', 
 '사람인변', '亻', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람인을 변으로 사용할 때 글자 모양', '', 
+'꿰뚫을관', '毌', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '무언가를 꿰뚫어 꿰어 놓은 모양', '', 
+'물수변', '氵', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '물수가 변으로 사용될 때 모양', '', 
+'그물망', '罒', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '그물 모양', '', 
+'언덕부방', '阝', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '봉우리가 2개 있는 언덕 모양. 주로 마을로 사용됨.', '', 
+'삼합집', '亼', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '지붕이 땅에 붙은 움집 모양', '', 
+'좋을량', '良', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '쌀에서 돌을 골라내는 석발기 모양. 석발기를 거치면 쌀이 좋아진다.', '', 
+'작을요', '幺', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '실타래를 눌러서 작게 만든 모양', '', 
+'창과', '戈', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '날이 달린 창모양', '', 
+'공교로울교', '丂', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '갈고리 모양. 갈고리로 무언가 공교롭게 걸어올린다', '', 
+'하품흠', '欠', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '입을 벌리고 하품하는 모습', '', 
+'집엄', '广', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '앞이 트인 대청마루와 지붕이 있는 집 모양', '', 
 
 
 
