--- a/index.html
+++ b/index.html
@@ -1907,6 +1907,16 @@ var arr = [
 '공교로울교', '丂', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '갈고리 모양. 갈고리로 무언가 공교롭게 걸어올린다', '', 
 '하품흠', '欠', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '입을 벌리고 하품하는 모습', '', 
 '집엄', '广', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '앞이 트인 대청마루와 지붕이 있는 집 모양', '', 
+'다스릴윤', '尹', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '손에 지휘봉을 들고 군대를 다스리는 군주의 모습', '', 
+'등질발', '癶', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '발 뒤꿈치 마주 대하고 발로 서있는 모습', '', 
+'집면', '宀', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '집 지붕 모양', '', 
+'예쁠봉', '丰', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '풀이 예쁘게 돋아난 모양', '', 
+'뒤져올치', '夂', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '다리를 끌면서 걷는 뒤쳐진 사람 모양', '', 
+'이수변', '冫', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '물어 얼어서 어름이 된 모양이 변으로 사용될 때 모양', '', 
+'비수비', '匕', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '숟가락 혹은 비수 모양', '', 
+'목멜기', '旡', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람이 무언가 먹다가 목에 무언가 걸린 모양', '', 
+'잠깐사', '乍', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '바느질 할 때 바늘이 짬깐 잠깐 보이는 모양', '', 
+'새추', '隹', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '새가 날개를 접고 앉아 있는 모양', '', 
 
 
 
