--- a/index.html
+++ b/index.html
@@ -1917,6 +1917,17 @@ var arr = [
 '목멜기', '旡', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람이 무언가 먹다가 목에 무언가 걸린 모양', '', 
 '잠깐사', '乍', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '바느질 할 때 바늘이 짬깐 잠깐 보이는 모양', '', 
 '새추', '隹', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '새가 날개를 접고 앉아 있는 모양', '', 
+'절구구', '臼', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '무언가 찧는 절구 모양', '', 
+'기슭엄', '厂', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '산 기슭에 있는 굴바위. 동굴집', '', 
+'해빛날간', '倝', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '동쪽 나무에 해가 걸리고 사람이 그 빛나는 모양을 바라보는 모습', '', 
+'왼손좌', '屮', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '손모양인데 왼손좌라고 부름. 또우 又는 오른손', '', 
+'병부절', '卩', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '몸을 구부린 사람 모양', '', 
+'걸을척', '彳', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '길을 걸어갈 때 뒤에 남는 발작구 모양', '', 
+'점주', '丶', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '점모양', '', 
+'꼬리파', '巴', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '엉덩이에서 꼬리가 나온 모양', '', 
+'마음심변', '忄', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '마음심이 변으로 사용될 때 모양', '', 
+'옷의변', '衤', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '옷의가 변으로 사용될 때 모양', '', 
+'수건건', '巾', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '나무 장대에 수건을 걸어 놓은 모양', '', 
 
 
 
