--- a/index.html
+++ b/index.html
@@ -1928,6 +1928,16 @@ var arr = [
 '마음심변', '忄', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '마음심이 변으로 사용될 때 모양', '', 
 '옷의변', '衤', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '옷의가 변으로 사용될 때 모양', '', 
 '수건건', '巾', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '나무 장대에 수건을 걸어 놓은 모양', '', 
+'손톱조두', '爫', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '무언가 잡아 올리는 손모양. 손톱이라고도 함', '', 
+'오래될고', '古', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '십대에 걸쳐서 구전되어 온건은 오래된 것이다. 고전', '', 
+'좋을양', '良', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '석발기 모양. 석발기를 거친 쌀은 좋다. 양호하다', '', 
+'괘이름간', '艮', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '눈을 강조한 사람 모양. 주로 눈을 가리킬 때 사용', '', 
+'벌레훼', '虫', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '날개와 꼬리가 있는 벌레 모양', '', 
+'안석궤', '几', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '책상 혹은 의자 모양', '', 
+'덮을멱', '冖', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '무언가를 덮개로 덮은 모양', '', 
+'갈착', '辶', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '길을 걸어가면 뒤에 발자국이 남는 모양', '', 
+'실멱', '糸', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '뽑은 실을 실타래로 만든 모양', '', 
+'스물입', '廿', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '땅속에 박혔다가 드러나는 모양', '', 
 
 
 
