--- a/index.html
+++ b/index.html
@@ -1938,6 +1938,8 @@ var arr = [
 '갈착', '辶', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '길을 걸어가면 뒤에 발자국이 남는 모양', '', 
 '실멱', '糸', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '뽑은 실을 실타래로 만든 모양', '', 
 '스물입', '廿', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '땅속에 박혔다가 드러나는 모양', '', 
+'쌍상투관', '丱', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '상투가 2개인 모양', '', 
+
 
 
 
