--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ var arr = [
 '아래하', '下', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '무언가 아래 있는 것을 가리킴', '', 
 '안내', '內', '멀경', '冂', '들입', '入', '.', ' ', '.', ' ', '.', ' ', '사람이 머리를 숙이고 안으로 들어오면 안은 실내이다. 내측', '', 
 '바깥외', '外', '저녁석', '夕', '점복', '卜', '.', ' ', '.', ' ', '.', ' ', '저녁에 점을 치는 것은 예외적인 경우이다. 아침에 쳐야한다. 외측', '', 
-'앞전', '前', '여덟팔', '八', '한일', '一', '달월', '月', '칼도방', '刂', '.', ' ', '팔에 삳대를 들고 찔러서 앞으로 가는 삿대배의 앞쪽에서 칼 가르는 모양이 보이는 모습. 전면', '', 
+'앞전', '前', '여덟팔', '八', '한일', '一', '달월', '月', '칼도방', '刂', '.', ' ', '팔에 삿대를 들고 찔러서 앞으로 가는 삿대배의 앞쪽에서 칼 가르는 모양이 보이는 모습. 전면', '', 
 '뒤후', '後', '걸을척', '彳', '작을요', '幺', '뒤져올치', '夂', '.', ' ', '.', ' ', '걷다보면 실타래처럼 행렬이 늘어나고 뒤에 뒤쳐지는 사람이 생긴다. 후면', '', 
 '겉표', '表', '예쁠봉', '丰', '옷의', '衣', '.', ' ', '.', ' ', '.', ' ', '털이 돛은 옷을 표라고 하고 겉에 입는다. 표지', '', 
 '곳처', '處', '범호', '虎', '뒤져올치', '夂', '.', ' ', '.', ' ', '.', ' ', '호랑이가 지친 다리를 늘어뜨리고 쉬는 곳이 처소이다', '', 
