--- a/index.html
+++ b/index.html
@@ -1939,6 +1939,15 @@ var arr = [
 '실멱', '糸', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '뽑은 실을 실타래로 만든 모양', '', 
 '스물입', '廿', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '땅속에 박혔다가 드러나는 모양', '', 
 '쌍상투관', '丱', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '상투가 2개인 모양', '', 
+'가죽위', '韋', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '짐승의 가죽인 모피를 벗겨서 바닥에 깔아 놓은 모습.', '', 
+'거스를역', '屰', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '거꾸로 거스리며 내려오는 사람 모습. 역행', '', 
+'내천2', '巛', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '시냇물이 굽이쳐 흐르는 모습', '', 
+'주검시', '尸', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '시신을 염해 놓은 모습', '', 
+'털모', '毛', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '꼬리에 털이 돋은 모습', '', 
+'병들역', '疒', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '병들어서 집에 기대어 있는 모습', '', 
+'감출혜', '匸', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '무언가 감추는 모습', '', 
+'창수', '殳', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '손에 날이선 창을 들고 있는 모습', '', 
+'죽은뼈알', '歹', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '죽은 사람의 뼈가 드러난 모습', '', 
 
 
 
