--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ var arr = [
 '눈안', '眼', '눈목', '目', '괘이름간', '艮', '.', ' ', '.', ' ', '.', ' ', '뜬눈과 내리깐 눈 모두 모아서 눈이라고 함. 안과', '', 
 '코비', '鼻', '스스로자', '自', '밭전', '田', '받들공', '廾', '.', ' ', '.', ' ', '코와 콧구멍 수염이난 인중으로 코를 강조함. 이빈후과', '', 
 '귀이', '耳', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '귓바퀴와 귓구멍으로 강조된 귀', '', 
-'이치', '齒', '그칠지', '止', '좇을종', '从', '한일', '一', '좇을종', '从', '입벌릴감', '凵', '인중 밑에 위 아래 가득한 이, 치아 모습', '', 
+'이치', '齒', '그칠지', '止', '쫓을종', '从', '한일', '一', '쫓을종', '从', '입벌릴감', '凵', '인중 밑에 위 아래 가득한 이, 치아 모습', '', 
 '입구', '口', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '입을 벌린 모양', '', 
 '또역', '亦', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람의 왼쪽 겨드랑이가 있고 또 오른쪽 겨드랑이도 있다', '', 
 '가슴흉', '胸', '달월', '月', '쌀포', '勹', '흉할흉', '凶', '.', ' ', '.', ' ', '살로 싸여 있고 그 안에 흉한 장기들이 가득한 가슴. 흉부외과', '', 
@@ -835,7 +835,7 @@ var arr = [
 '잡을집', '執', '다행행', '幸', '둥글환', '丸', '.', ' ', '.', ' ', '.', ' ', '수갑을 채운 죄인을 데려오기 위해 등을 구부리고 잡는 모습. 집착', '', 
 '전할전', '傳', '사람인변', '亻', '오로지전', '專', '.', ' ', '.', ' ', '.', ' ', '사람이 오로지 한 방향으로 도는 물레를 돌려 실을 만들고 베짜는 사람에게 전한다. 전달', '', 
 '절배', '拜', '손수', '手', '손수', '手', '.', ' ', '.', ' ', '.', ' ', '손과 손을 모아서 절을 하는 모습', '', 
-'좇을종2', '從', '걸을척', '彳', '사람인', '人', '사람인', '人', '발족', '足', '.', ' ', '길을 갈 때 앞에 가는 사람을 좇아 가는 뒷사람의 발 모양. 일렬종대', '', 
+'쫓을종2', '從', '걸을척', '彳', '사람인', '人', '사람인', '人', '발족', '足', '.', ' ', '길을 갈 때 앞에 가는 사람을 좇아 가는 뒷사람의 발 모양. 일렬종대', '', 
 '주울습', '拾', '손수변', '扌', '합할합', '合', '.', ' ', '.', ' ', '.', ' ', '손으로 흩어진 것들을 주워서 합치는 모양. 시신수습', '', 
 '줄수', '授', '손수변', '扌', '받을수', '受', '.', ' ', '.', ' ', '.', ' ', '손으로 주어 다른 사람의 손이 받게 하는 모습. 수여', '', 
 '지킬수', '守', '집면', '宀', '마디촌', '寸', '.', ' ', '.', ' ', '.', ' ', '집 앞에서 손에 무기를 들고 집 지키는 모양. 수위', '', 
@@ -1015,7 +1015,7 @@ var arr = [
 '해당할해', '該', '말씀언', '言', '돼지해', '亥', '.', ' ', '.', ' ', '.', ' ', '말로 돼지 부위에 어떤 것들이 해당되는지 나열하는 모습. 해당', '', 
 '서로호', '互', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '실패가 위아래로 두 개가 붙어 있는 모양. 상호', '', 
 '씨줄위', '緯', '실멱', '糸', '가죽위', '韋', '.', ' ', '.', ' ', '.', ' ', '실인데 가죽이 사람의 몸을 두르듯 베틀의 세로 날실을 둘러싸는 씨실. 위도', '', 
-'세로종', '縱', '실멱', '糸', '좇을종2', '從', '.', ' ', '.', ' ', '.', ' ', '실인데 세로로 서서 앞실을 쫓아가는 날실. 일열 종대', '', 
+'세로종', '縱', '실멱', '糸', '쫓을종2', '從', '.', ' ', '.', ' ', '.', ' ', '실인데 세로로 서서 앞실을 쫓아가는 날실. 일열 종대', '', 
 '가로횡', '橫', '나무목', '木', '누를황', '黃', '.', ' ', '.', ' ', '.', ' ', '나무를 가로로 잘랐을 때 누런 색이 보이는 방향. 일열 횡대', '', 
 '기울경', '傾', '사람인변', '亻', '비수비', '匕', '머리혈', '頁', '.', ' ', '.', ' ', '사람이 비수인 숟갈로 밥을 먹을 때 고개가 기울이는 모습. 경사', '', 
 '기울경2', '頃', '비수비', '匕', '머리혈', '頁', '.', ' ', '.', ' ', '.', ' ', '사람이 숟갈로 밥을 먹을 때 고개가 기울어지는 모습. 사람인자 빠진자', '', 
@@ -1948,6 +1948,11 @@ var arr = [
 '감출혜', '匸', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '무언가 감추는 모습', '', 
 '창수', '殳', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '손에 날이선 창을 들고 있는 모습', '', 
 '죽은뼈알', '歹', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '죽은 사람의 뼈가 드러난 모습', '', 
+'손수변', '扌', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '손수가 변으로 사용되는 형태', '', 
+'터럭삼', '彡', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '털모양. 별빛이 비치는 모양', '', 
+'쫓을종', '从', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람이 사람을 쫓아가는 모습', '', 
+'쌀포', '勹', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '아기를 싸고 있는 태보 모양', '', 
+
 
 
 
