--- a/index.html
+++ b/index.html
@@ -1952,6 +1952,13 @@ var arr = [
 '터럭삼', '彡', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '털모양. 별빛이 비치는 모양', '', 
 '쫓을종', '从', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람이 사람을 쫓아가는 모습', '', 
 '쌀포', '勹', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '아기를 싸고 있는 태보 모양', '', 
+'병부절2', '㔾', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '몸을 구부린 사람 모양', '', 
+'조각장', '爿', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '나무를 반 갈라서 나무 조각으로 만든 평상 모습.', '', 
+'숨을은', '乚', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '숨을 만한 은폐물 모습. 은폐물 뒤에 숨는다.', '', 
+'기운기', '气', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '밥을 할 때 김이 기운차게 나오는 모습', '', 
+'부탁할탁', '乇', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '모종 모양. 모종이 나오면 누군가에게 부탁해서 물을 자주 주어야 한다.', '', 
+'돼지시', '豕', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '머리를 쳐박고 무언가 먹는 돼지 모습', '', 
+'점괘효', '爻', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '산가지로 점을 치면 나오는 점괘 모양', '', 
 
 
 
