--- a/index.html
+++ b/index.html
@@ -1959,6 +1959,11 @@ var arr = [
 '부탁할탁', '乇', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '모종 모양. 모종이 나오면 누군가에게 부탁해서 물을 자주 주어야 한다.', '', 
 '돼지시', '豕', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '머리를 쳐박고 무언가 먹는 돼지 모습', '', 
 '점괘효', '爻', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '산가지로 점을 치면 나오는 점괘 모양', '', 
+'칠복', '攵', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '손에 몽둥이를 들고 치는 모습', '', 
+'주살익', '弋', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '짐승을 잡는 사냥꾼의 올무. 주살.', '', 
+'칼날인', '刄', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '칼에서 빛이 나는 칼날 모습.', '', 
+'관리리', '吏', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '손에 붓을 들고 역사를 기록하는 사관은 관리이다. ', '', 
+'창모', '矛', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '날이 여럿 달린 창모양.', '', 
 
 
 
