--- a/index.html
+++ b/index.html
@@ -1964,6 +1964,8 @@ var arr = [
 '칼날인', '刄', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '칼에서 빛이 나는 칼날 모습.', '', 
 '관리리', '吏', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '손에 붓을 들고 역사를 기록하는 사관은 관리이다. ', '', 
 '창모', '矛', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '날이 여럿 달린 창모양.', '', 
+'평평할견', '幵', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '방책을 여러 개 나란히 놓으면 면이 평평해 보인다', '', 
+'고를균', '勻', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '평미래로 말의 표면을 고르게 하는 모습. 평균', '', 
 
 
 
